# torchcriterion

./: README.md  __init__.py  base.py  pyproject.toml
classification/: cross_entropy.py  focal.py
metric_learning/: contrastive.py
regression/: mse.py
segmentation/: dice.py
torchcriterion/metric_learning/: contrastive.py  triplet.py
torchcriterion/regression/: huber.py
torchcriterion/segmentation/: tversky.py
